base game finished

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Adivinhe o número entre 0 e 10</p>
 
         <div class="guesses">
-            <input type="text">
+            <input type="text" id="number">
 
             <button>Tentar</button>
         </div>
