--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 
         <p>Adivinhe o número entre 0 e 10</p>
 
-        <div class="guesses">
-            <input type="text" id="number">
+        <form action="">
+            <input type="number" id="number">
 
             <button>Tentar</button>
-        </div>
+        </form>
 
     </div>
+
+    <!--* o maykão, para mudar as telas criou 2 divs para cada tela com uso da classe hide para alternar.-->
 
     <script src="main.js"></script>
 </body>
