--- a/index.html
+++ b/index.html
@@ -17,15 +17,24 @@
     
     <div class="game">
 
-        <h1>Jogo da Adivinhação</h1>
+        <div class="screen1">
+            <h1>Jogo da Adivinhação</h1>
 
-        <p>Adivinhe o número entre 0 e 10</p>
+            <p>Adivinhe o número entre 0 e 10</p>
 
-        <form action="">
-            <input type="number" id="number">
+            <form action="">
+                <input type="number" id="number">
 
-            <button>Tentar</button>
-        </form>
+                <button id="btnTry">Tentar</button>
+            </form>
+        </div>
+
+
+        <div class="screen2 hide">
+            <h2></h2>
+            <button id="btnReset">Jogar novamente</button>
+        </div>
+
 
     </div>
 
